# wmail

./: CMakeLists.txt  Makefile
include/: CApplication.h  CMainpage.h  CMenu.h  mainpage.h  wmailapplication.h
source/: CApplication.cxx  CMainpage.cxx  CMakeLists.txt  CMenu.cxx  hello.cxx  mainpage.cxx  wmail.cxx  wmailapplication.cxx
testimap/: test.cxx
