SET(WT_PROJECT_SOURCE
wmail.cxx
wmailapplication.cxx
mainpage.cxx
)
SET(WT_PROJECT_TARGET wmail.wt)
ADD_EXECUTABLE(${WT_PROJECT_TARGET} ${WT_PROJECT_SOURCE})
TARGET_LINK_LIBRARIES(${WT_PROJECT_TARGET} ${WT_CONNECTOR} wt vmime gnutls gsasl)
INCLUDE_DIRECTORIES(/usr/local/include/Wt)
INCLUDE_DIRECTORIES(/usr/local/include)
INCLUDE_DIRECTORIES(/usr/local/lib)
INCLUDE_DIRECTORIES(../include)
